--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<script src="https://kit.fontawesome.com/73843a4163.js" crossorigin="anonymous"></script>
 </body>
 </html>
